Moved navbar javascript to navbar fragment

--- a/src/main/resources/templates/components/internal-storage.html
+++ b/src/main/resources/templates/components/internal-storage.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/navbar.css}" href="/navbar.css">
 </head>
 <body>
+<div th:replace="~{navbar :: navbar}"></div>
 <form th:action="@{/components/internal-storage}" method="get">
   <p>
     <label for="sortBy">Sort By</label>
