--- a/src/main/resources/templates/orderSuccess.html
+++ b/src/main/resources/templates/orderSuccess.html
@@ -3,11 +3,35 @@
 <head>
     <meta charset="utf-8" />
     <title>Order Success</title>
+    <link rel="stylesheet" th:href="@{/css/navbar.css}" href="/navbar.css">
+
 </head>
 <body>
+<div th:replace="~{navbar :: navbar}"></div>
+
 <h1>Order Status</h1>
 <p th:text="${message}">Order placed successfully!</p>
 
 <p><a th:href="@{/create_order}" onclick="history.back(); return false;">Place another order</a></p>
 </body>
+
+<script>
+
+    document.addEventListener('DOMContentLoaded', () => {
+        const toggleButton = document.querySelector('.dropdown-toggle');
+        const dropdown = document.getElementById('componentsDropdown');
+
+        toggleButton.addEventListener('click', () => {
+            const isVisible = dropdown.style.display === 'block';
+            dropdown.style.display = isVisible ? 'none' : 'block';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (!toggleButton.contains(event.target) && !dropdown.contains(event.target)) {
+                dropdown.style.display = 'none';
+            }
+        });
+    });
+
+</script>
 </html>
