Part of the way through fixing the navbar

--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
     <link rel="stylesheet" th:href="@{/css/basket.css}">
 </head>
-<body class="basket-page">
-<!-- Include navbar -->
+<body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="basket-container">
