--- a/src/main/resources/templates/customer/dashboard.html
+++ b/src/main/resources/templates/customer/dashboard.html
@@ -2,15 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Customer Dashboard</title>
-    <link rel="stylesheet" th:href="@{/css/navbar.css}" href="/navbar.css">
+    <link rel="stylesheet" th:href="@{/css/navbar.css}">
 
 </head>
 <body>
-    <div th:replace="~{navbar :: navbar}"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 
-    <h1>Welcome to your Dashboard</h1>
-    <p>Logged in as: <span th:text="${userName}"></span></p>
-    <div th:replace="~{fragments/login-logout :: login-logout}"></div>
+<h1>Welcome to your Dashboard</h1>
+<p>Logged in as: <span th:text="${userName}"></span></p>
+<div th:replace="~{fragments/login-logout :: login-logout}"></div>
 </body>
 
 <script>
