--- a/src/main/resources/templates/components/cpus.html
+++ b/src/main/resources/templates/components/cpus.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/navbar.css}" href="/navbar.css">
 </head>
 <body>
-<div th:replace="~{navbar :: navbar}"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 <form th:action="@{/components/cpus}" method="get">
     <p>
         <label for="sortBy">Sort By</label>
