--- a/src/main/resources/templates/shipper_details.html
+++ b/src/main/resources/templates/shipper_details.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" th:href="@{/css/navbar.css}">
 </head>
 <body>
-<div th:replace="navbar :: navbar"></div>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
 <h1 th:text="${shipper.facility_name}">Shipper Name</h1>
 
 <table>
