scraper works with proxies (in file proxyscrape_premium...), added button for comparing market rates to nav bar, scraper returns a full list of components and their prices

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -24,6 +24,9 @@
     <form th:if="${userRole} == 'STAFF'" th:action="@{/orders/manage}" method="get">
         <button type="submit">Manage Orders</button>
     </form>
+    <form th:if="${userRole} == 'STAFF'" th:action="@{/pricecomparison}" method="get">
+        <button type="submit">Compare Market Rates</button>
+    </form>
 
     <form th:action="@{/toggle-staff}" method="post">
         <button type="submit"
